--- a/bitrix/templates/elektro_flat/template_styles.css
+++ b/bitrix/templates/elektro_flat/template_styles.css
@@ -4918,7 +4918,6 @@ transform: translateX(-8px);
 	/***SLIDER_TOP***/
 	.anythingContainer{
 		width:100%;
-		height:auto;
 		margin:0px;
 	}
 
